<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_expenses"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/expenses" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/categories" />

        <item
            android:id="@+id/nav_insights"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/insights" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>