<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_default"
    tools:context=".ui.fragments.CategoryFormFragment">

    <TextView
        android:id="@+id/tv_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:textAppearance="@style/TextAppearance.App.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Add Category" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_category_name"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/category_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_form_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_category_description"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="@string/category_description"
        app:layout_constraintTop_toBottomOf="@+id/til_category_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_category_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_color_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/category_color"
        android:textAppearance="@style/TextAppearance.App.Body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_category_description" />

    <View
        android:id="@+id/view_category_color"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_color_label" />

    <TextView
        android:id="@+id/tv_color_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:textAppearance="@style/TextAppearance.App.Body"
        app:layout_constraintBottom_toBottomOf="@+id/view_category_color"
        app:layout_constraintStart_toEndOf="@+id/view_category_color"
        app:layout_constraintTop_toTopOf="@+id/view_category_color"
        tools:text="#4CAF50" />

    <Button
        android:id="@+id/btn_select_color"
        style="@style/Widget.App.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_color"
        app:layout_constraintBottom_toBottomOf="@+id/view_category_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_category_color" />

    <Button
        android:id="@+id/btn_save_category"
        style="@style/Widget.App.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/view_category_color" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>